--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea/
+*.sav
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -129,3 +130,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+phoneme_model.sav
